<resources>
    <string name="app_name">MU taxi</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_pick_up">PICK UP</string>
    <string name="text_drop_off">DROP OFF</string>
    <string name="btn_message">Message</string>
    <string name="btn_call">Call</string>
    <string name="btn_confirm_state">I arrived</string>
    <string name="btn_pickup_state">Pick Up</string>
    <string name="btn_dropoff_state"> Drop Off</string>
    <string name="btn_checkout_state"> Check Out</string>
    <string name="change_passsword">Change Passsword</string>
    <string name="userprofile">User Profile</string>
    <string name="todo">TODO</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="bike">bike</string>
    <string name="car">car</string>
    <string name="customer">Customer</string>
    <string name="driver">Driver</string>
    <string name="next">Next</string>
    <string name="mal">Male</string>
    <string name="femal">Female</string>
    <string name="phone_number">Phone Number</string>
    <string name="pick_date">Pick date</string>
    <string name="update_profile">Update profile</string>
    <string name="birr_50">birr. 50</string>
    <string name="birr_15">birr. 15</string>
    <string name="book_now">Book now</string>
    <string name="_20km">20km</string>
    <string name="mini_bus">MINI BUS</string>
    <string name="lada">LADA</string>
    <string name="_15">15</string>
    <string name="Back">Back</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="Todo">TODO</string>
    <string name="toDo">TODO</string>
    <string name="ToDo">TODO</string>
    <string name="do_you_need_a_taxi">Do you need a taxi?</string>
    <string name="how_is_your_trip">How is your trip?</string>
    <string name="please_help_us_to_improve_nthe_experience_with_my_app_nby_evaluating_this_trip">Please help us to improve\nthe experience with My app\nby evaluating this trip</string>
    <string name="tell_us_what_you_liked">Tell us what you liked</string>
    <string name="TODo">TODO</string>
    <string name="smooth">SMOOTH</string>
    <string name="send_feedback">Send feedback</string>
    <string name="details">Details</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="Birr_50">Birr.50</string>
    <string name="distance_6km">Distance: 6km</string>
    <string name="current_location">Current Location</string>
    <string name="toDO">TODO</string>
    <string name="cash">Cash</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="TODO">TODO</string>
    <string name="todO">TODO</string>
    <string name="tOdo">TODO</string>
    <string name="TodO">TODO</string>
    <string name="driver_home">Driver Home</string>
    <string name="profile">Profile</string>
    <string name="customer_home">Customer Home</string>
    <string name="logout">Logout</string>


</resources>