<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/quantum_cyan600">

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:text="@string/Birr_50"
        android:textColor="#0D47A1"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/text_paymentType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:text="@string/cash"
        android:textColor="#0D47A1"
        android:textSize="20sp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="15dp"
        android:background="@color/blue">

        <TextView
            android:id="@+id/Text_serviceType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/details"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#85929E" />

        <TextView
            android:id="@+id/text_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/distance_6km"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todO"
            android:orientation="horizontal"
            android:paddingTop="10dp">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/TODO"
                app:srcCompat="@drawable/icons8_green_circle_96" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tOdo"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/text_pickUpLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/toDO"
                    android:text="@string/current_location"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/TodO"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/icons8_red_circle_96"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/text_dropLocation"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pickup_location"
                    android:textColor="@color/white"
                    android:textSize="26sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/btn_decline"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/red"
                android:text="@string/decline"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/btn_accept"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:text="@string/accept"
                android:textColor="#424242"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


