<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBFAFE"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/registerBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/black"
        android:text="@string/back"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408">

        <EditText
            android:id="@+id/registerUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:autofillHints="username"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="Username"
            android:padding="10dp" />

        <EditText
            android:id="@+id/registerPhoneEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="Phone number"
            android:inputType="phone"
            android:padding="10sp"
            tools:ignore="TouchTargetSizeCheck" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20sp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/registerBirthEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10sp"
                    android:autofillHints=""
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:enabled="true"
                    android:hint="Birthdate"
                    android:inputType="date"
                    android:padding="10sp"

                    tools:ignore="HardcodedText" />
        <Button
                android:id="@+id/registerPickdateBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/blue"
                android:text="Pick date"
                android:textSize="12sp" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10sp">

            <RadioButton
                android:id="@+id/registerMaleRadioBtn"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/mal" />

            <RadioButton
                android:id="@+id/registerFemaleRadioBtn"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="@string/femal" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/roleGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10sp">

            <RadioButton
                android:id="@+id/registerCustomerRadioBtn"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/customer" />

            <RadioButton
                android:id="@+id/registerDriverRadioBtn"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:text="@string/driver" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/transportationTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="invisible">

            <RadioButton
                android:id="@+id/registerCarRadioBtn"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/car" />

            <RadioButton
                android:id="@+id/registerBikeRadioBtn"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:text="@string/bike" />
        </RadioGroup>

        <EditText
            android:id="@+id/registerVehiclePlateNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10sp"
            android:background="#FFFFFF"
            android:ems="10"
            android:enabled="true"
            android:hint="Vehicle plate number"
            android:padding="10sp"
            android:visibility="invisible"
            tools:ignore="VisualLintBounds" />

        <Button
            android:id="@+id/registerFinalRegisterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:backgroundTint="#000000"
            android:padding="10dp"
            android:text="@string/next"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:backgroundTint="@color/blue" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>