<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBFAFE"
    tools:context=".RegisterFinalActivity">

    <Button
        android:id="@+id/registerFinalBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="#2AC7FE"
        android:text="@string/Back"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205">

        <EditText
            android:id="@+id/registerFinalEmailEditText"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:autofillHints="EMAIL"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp" />

        <EditText
            android:id="@+id/registerFinalPasswordEditText"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp" />


        <Button
            android:id="@+id/registerFinalRegisterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:backgroundTint="@color/blue"
            android:padding="10dp"
            android:text="@string/Register"
            android:textColor="#757575"
            android:textSize="18sp"
            app:backgroundTint="@color/blue" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>